--- a/src/Style/Contact/contact.css
+++ b/src/Style/Contact/contact.css
@@ -129,6 +129,7 @@
   flex-direction: column;
   justify-content: space-around;
   padding-inline: 10vw;
+  margin-block: 10vh;
 }
 
 .cont-info-text {
