--- a/src/Style/Contact/contact.css
+++ b/src/Style/Contact/contact.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 .contact-main {
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
   display: grid;
   justify-content: center;
@@ -27,6 +27,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+}
+.cont-form h1 {
+  font-size: clamp(2.35rem, 10vw, 4.5rem);
 }
 
 #contact-form {
@@ -168,6 +171,7 @@
 @media (max-width: 1100px) {
   .contact-main {
     row-gap: 5vh;
+    grid-template-columns: auto;
   }
   .cont-form {
     padding-inline: 5%;
@@ -192,5 +196,37 @@
     text-align: center;
     font-size: clamp(3.25rem, 10vw, 10.25rem);
     margin-right: 0;
+  }
+}
+@media (max-width: 770px) {
+  .cont-form {
+    min-height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    text-align: center;
+    gap: 5vh;
+    width: 100%;
+  }
+  .cont-form h1 {
+    font-size: clamp(2rem, 10vw, 4.5rem);
+  }
+  .cont-form #contact-form {
+    width: 100%;
+  }
+  .cont-detail ul {
+    row-gap: 50px;
+    text-align: center;
+    align-items: center;
+  }
+  .cont-info {
+    margin-bottom: 0;
+  }
+  .cont-info-text h3 {
+    font-size: clamp(1.7rem, 10vw, 2.5rem);
+  }
+  .cont-info-text h1 {
+    font-size: clamp(2.25rem, 10vw, 10.25rem);
   }
 }/*# sourceMappingURL=contact.css.map */
