--- a/src/Style/Contact/contact.scss
+++ b/src/Style/Contact/contact.scss
@@ -1,5 +1,5 @@
 .contact-main {
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
   display: grid;
   justify-content: center;
@@ -28,6 +28,11 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+
+  
+  h1 {
+    font-size: clamp(2.35rem, 10vw, 4.5rem);
+}
 }
 
 // .contact {
@@ -231,6 +236,7 @@
 @media (max-width: 1100px) {
   .contact-main {
     row-gap: 5vh;
+    grid-template-columns: auto;
   }
   .cont-form {
     padding-inline: 5%;
@@ -262,3 +268,39 @@
 }
 }
 
+@media (max-width: 770px) {
+  .cont-form{
+    min-height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    text-align: center;
+    gap: 5vh;
+    width: 100%;
+
+    h1 {
+      font-size: clamp(2rem, 10vw, 4.5rem);
+  }
+  #contact-form{
+    width: 100%;
+  }
+  }
+
+  .cont-detail ul {
+    row-gap: 50px;
+    text-align: center;
+    align-items: center;
+  }
+  .cont-info{
+    margin-bottom: 0;
+  }
+  .cont-info-text{
+    h3 {
+      font-size: clamp(1.7rem, 10vw, 2.5rem);
+  }
+  h1{
+    font-size: clamp(2.25rem, 10vw, 10.25rem);
+  }
+  }
+}
