--- a/src/App.css
+++ b/src/App.css
@@ -66,26 +66,27 @@ a.button:focus-visible {
   outline: 1px auto var(--accent);
 }
 
-.slideIn{
+.slideIn {
   display: flex;
   justify-content: center;
-    align-items: center;
-position: fixed;
-top: 0;
-left: 0;
-width: 100%;
-height: 100vh;
-background-color: rgb(24, 24, 24);
-transform-origin: right;
-z-index: 10000;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(0, 0, 0);
+  transform-origin: right;
+  z-index: 10000;
 }
-.slideOut{
-position: fixed;
-top: 0;
-left: 0;
-width: 100%;
-height: 100vh;
-background-color: rgb(10, 10, 10);
-transform-origin: right;
-z-index: 10001;
+
+.slideOut {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: var(--accent);
+  transform-origin: right;
+  z-index: 10001;
 }
